<resources>
    <string name="app_name">Gym Buddy</string>
    <string name="content_description_tools">Tools</string>
    <string name="content_description_diet">Diet</string>
    <string name="content_description_exercises">Exercises</string>
    <string name="content_description_weekly_routine">Weekly Routine</string>
    <string name="content_description_gym_buddy">Gym Buddy</string>
    <string-array name="exerciseSelect">
        <item>BMR: Basal Metabolic Rate</item>
        <item>Light: 3–4 times(Week)</item>
        <item>Moderate: 4–6 times(Week)</item>
        <item>Intense: 6-7 times(Week)</item>
    </string-array>
</resources>