<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background"
    android:id="@+id/layout1">

    <TextView
        android:id="@+id/txt1"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="50dp"
        android:background="#40ffffff"
        android:contentDescription="@string/content_description_gym_buddy"
        android:gravity="center" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="290dp"
        android:layout_height="70dp"
        android:layout_below="@id/txt1"
        android:layout_marginStart="50dp"
        android:layout_marginTop="70dp"
        android:backgroundTint="#05384B"
        android:contentDescription="@string/content_description_weekly_routine" />

    <Button
        android:id="@+id/btn2"
        android:layout_below="@id/btn1"
        android:layout_marginTop="30dp"
        android:layout_width="290dp"
        android:layout_height="70dp"
        android:layout_marginStart="50dp"
        android:contentDescription="@string/content_description_exercises"
        android:backgroundTint="#05384B"/>


    <Button
        android:id="@+id/btn3"
        android:layout_width="290dp"
        android:layout_height="70dp"
        android:layout_below="@id/btn2"
        android:layout_marginTop="30dp"
        android:layout_marginStart="50dp"
        android:backgroundTint="#05384B"
        android:contentDescription="@string/content_description_diet" />

    <Button
        android:id="@+id/btn4"
        android:layout_below="@id/btn3"
        android:layout_marginTop="30dp"
        android:layout_width="290dp"
        android:layout_height="70dp"
        android:layout_marginStart="50dp"
        android:contentDescription="@string/content_description_tools"
        android:backgroundTint="#05384B"/>

</RelativeLayout>